# cityplanner

./: .gitignore  README.md  config.xlsx  index.html  knn_custom_metric.py  pyproject.toml  requiremenets.txt
planner/: __main__.py  app.py  demo.py
planner/optimization/: debug_distances.py  debug_optimization.py  loaders.py  mocma.py  model.py  optimizers.py  run_optimization.py
planner/utils/: files.py  geo_utils.py  math.py
resources/: adm_names.json  adm_zones.gz.pq  all_shapes.gz.pq  cemetery.gz.pq  excel_config.xlsx  highways.gz.pq  parks.gz.pq  railroad.gz.pq  shapes.gz.pq  short_shapes.gz.pq  short_shapes_geo.gz.pq  waters.gz.pq
static/: app.js
tests/: test_geo_indices.py  test_load_data.py  test_read_config_data.py  test_stop_objects.py
