[tool.poetry]
name = "planner"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.14.0"
colorlog = "^5.0.1"
python-dotenv = "^0.19.0"
fastapi = "^0.68.1"
aiofiles = "^0.7.0"
pyshp = "^2.1.3"
pandas = "^1.3.3"

[tool.poetry.dev-dependencies]
ipython = "^7.13.0"
mypy = "^0.910"
isort = "^4.3.21"
flake8 = "^3.8.3"
ipdb = "^0.13.4"
pytest = "^6.2.2"
black = "^21.9b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 110

[tool.isort]
multi_line_output = 3
line_length = 60
include_trailing_comma = true
skip = ["venv"]

[tool.mypy]
python_version = 3.9
strict = true
exclude = "venv"

[[tool.mypy.overrides]]
module = "tests.*"

[tool.pytest.ini_options]
addopts = "-W ignore::DeprecationWarning"
